# alch

./: .gitignore  Alchemy.hpp  CMakeLists.txt  CMakePresets.json  Common.hpp  Effect.hpp  GameSettings.hpp  Ingredient.hpp  Loader.hpp  Potion.hpp  README.md  UserAssist.hpp  alch.sln  caco-alch.vcxproj  caco-alch.vcxproj.filters  main.cpp  reloader.hpp  resource.h  xEdit-ingredient-export-instructions.txt
.github/workflows/: GenerateRelease.yaml  GenerateRelease.yml
PrintArgv0/: PrintArgv0.vcxproj  main.cpp
TEST/: TEST.cpp  TEST.vcxproj  TEST.vcxproj.filters  alch_win_unit-tests.hpp  expected-build.txt  expected-list-all.txt  expected-search-exact.txt  expected-search-verbose.txt  expected-search.txt  expected-smart-search.txt  pch.h
_backups/: Potion.hpp
alch/: CMakeLists.txt  Colors.hpp  Instance.hpp  main.cpp
alch-lib/: CMakeLists.txt
alch-lib/include/: Alchemy.hpp  ColorAPI.hpp  DefaultObjects.hpp  Effect.hpp  Format.hpp  GameConfig.hpp  Ingredient.hpp  IngredientCache.hpp  Keyword.hpp  OutputFormat.hpp  handle_arguments.hpp  reloader.hpp  reparse.hpp  using.h
alch-lib/src/: DefaultObjects.cpp
alch-parse/: alch-parse.vcxproj  main.cpp
alch/rc/: alch.rc  version.h
alch2/: CMakeLists.txt  ObjectFormatter.hpp  main.cpp
alch_linux/: alch_linux.vcxproj  alch_linux.vcxproj.filters  main.cpp
alch_win/: Instance.hpp  alch-windows.rc  alch_win.filters  alch_win.vcxproj  alch_win.vcxproj.filters  caco-alch.rc  caco-alch.vcxproj  init.hpp  main.cpp  resource.h
alchlib/include/: Alchemy.hpp  ColorAPI.hpp  DefaultObjects.hpp  Effect.hpp  Format.hpp  GameConfig.hpp  Ingredient.hpp  IngredientCache.hpp  Keyword.hpp  ObjectBase.hpp  OutputFormat.hpp  handle_arguments.hpp  reloader.hpp  reparse.hpp
alchlib/src/: ColorAPI.cpp
alchlib2/: CMakeLists.txt
alchlib2/include/: EKeywordDisposition.h  Effect.hpp  Formula.hpp  GameSetting.hpp  INamedObject.hpp  Ingredient.hpp  Keyword.hpp  PerkBase.hpp  Potion.hpp  PotionBuilder.hpp  Registry.hpp  SerializerDefs.h  alchlib2.hpp
alchlib2/include/keywords/: VanillaKeywords.h
alchlib2/include/perks/: VanillaPerks.h
alchlib2/src/: INamedObject.cpp  Keyword.cpp
build-registry/: build-registry.vcxproj  combine.hpp  main.cpp
caco_alch/: Alchemy.hpp  ColorAPI.hpp  ColorConfigLoader.hpp  DefaultObjects.hpp  Effect.hpp  Format.hpp  Formatter.hpp  GameConfig.hpp  GameSettings.hpp  Help.hpp  Ingredient.hpp  IngredientCache.hpp  Keyword.hpp  ObjectBase.hpp  Output.hpp  OutputBuffer.hpp  OutputFormat.hpp  Perks.hpp  Potion.hpp  UserAssist.hpp  caco-alch.ini  caco-ingredient-list.dat.v1  caco-ingredient-list.dat.v2  caco_alch.vcxitems  caco_alch.vcxitems.filters  handle_arguments.hpp  reloader.hpp  using.h
documentation/: Doxyfile
documentation/html/: _alchemy_8hpp_source.html  _common_8hpp_source.html  _effect_8hpp_source.html  _ingredient_8hpp_source.html  _loader_8hpp_source.html  _potion_8hpp_source.html  _user_assist_8hpp.html  _user_assist_8hpp__dep__incl.map  _user_assist_8hpp__dep__incl.md5  _user_assist_8hpp__incl.map  _user_assist_8hpp__incl.md5  _user_assist_8hpp_a0294a3a64204ddf933d9d4d87a905611_cgraph.md5  _user_assist_8hpp_a0294a3a64204ddf933d9d4d87a905611_icgraph.map  _user_assist_8hpp_a0294a3a64204ddf933d9d4d87a905611_icgraph.md5  _user_assist_8hpp_a3eb2f4f89db29c49346107f0fd1119de_cgraph.map  _user_assist_8hpp_a3eb2f4f89db29c49346107f0fd1119de_cgraph.md5  _user_assist_8hpp_a3eb2f4f89db29c49346107f0fd1119de_icgraph.md5  _user_assist_8hpp_source.html  annotated.html  classcaco__alch_1_1_alchemy-members.html  classcaco__alch_1_1_alchemy.html  classcaco__alch_1_1_potion-members.html  classcaco__alch_1_1_potion.html  classes.html  dir_813300dbce44f278a5e8b985a9745282.html  doxygen.css  files.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  index.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  main_8cpp_source.html  md__x____workspace_alch_caco_alch__r_e_a_d_m_e.html  (+19 more)
documentation/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  namespaces_0.js  pages_0.js  related_0.js  search.css  searchdata.js  variables_0.js
documentation/latex/: _user_assist_8hpp.tex  _user_assist_8hpp__dep__incl.md5  _user_assist_8hpp__incl.md5  _user_assist_8hpp_a0294a3a64204ddf933d9d4d87a905611_cgraph.md5  _user_assist_8hpp_a0294a3a64204ddf933d9d4d87a905611_icgraph.md5  _user_assist_8hpp_a3eb2f4f89db29c49346107f0fd1119de_cgraph.md5  _user_assist_8hpp_a3eb2f4f89db29c49346107f0fd1119de_icgraph.md5  annotated.tex  classcaco__alch_1_1_alchemy.tex  classcaco__alch_1_1_potion.tex  files.tex  main_8cpp.tex  main_8cpp__incl.md5  md__x____workspace_alch_caco_alch__r_e_a_d_m_e.tex  namespace_help.tex  namespaces.tex  refman.tex  structcaco__alch_1_1__internal_1_1less.tex  structcaco__alch_1_1_alchemy_1_1_format.tex  structcaco__alch_1_1_effect.tex  structcaco__alch_1_1_help_1_1_helper.tex  structcaco__alch_1_1_help_1_1_helper_a728e9a9f1c350eb3ac32e134defe2c3b_icgraph.md5  structcaco__alch_1_1_help_1_1_helper_a760e316506cac5920071e171ec00f93e_cgraph.md5  structcaco__alch_1_1_ingredient.tex
legacy-build-registry/: build-registry.vcxproj.filters  combine.hpp
testdata/: alch.ingredients
